--- a/carbon-route.html
+++ b/carbon-route.html
@@ -226,8 +226,8 @@ the `carbon-route` will update `route.path`. This in-turn will update the
     __resetProperties: function() {
       this._setActive(false);
       this._matched = null;
-      //this.tail = { path: null, prefix: null, __queryParams: null };
-      //this.data = {};
+      this.tail = { path: null, prefix: null, __queryParams: null };
+      this.data = {};
     },
 
     /**
